# pykoclaw-acp

./: README.md  package.json  playwright.config.ts  pyproject.toml
backlog/: 001-acp-architecture-fragility.md  002-process-isolated-workers-plan.md  003-session-load-resume.md
src/pykoclaw_acp/: __init__.py  client_pool.py  protocol.py  server.py  watchdog.py  worker.py  worker_pool.py  worker_protocol.py
tests/: conftest.py  test_acp_plugin.py  test_client_pool.py  test_e2e.py  test_healthcheck.py  test_integration.py  test_kill_client.py  test_protocol.py  test_server.py  test_session_resume.py  test_shutdown.py  test_worker.py  test_worker_pool.py  test_worker_protocol.py
tests/integration/: test-mitto-acp.spec.ts
