[project]
name = "pykoclaw-acp"
version = "0.1.0"
description = "ACP (Agent Client Protocol) plugin for pykoclaw"
requires-python = ">=3.12"
dependencies = ["pykoclaw", "pykoclaw-messaging", "click"]

[tool.uv.sources]
pykoclaw = { workspace = true }
pykoclaw-messaging = { workspace = true }

[project.entry-points."pykoclaw.plugins"]
acp = "pykoclaw_acp:AcpPlugin"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring a running Claude API (deselected by default)",
]
addopts = "-m 'not e2e'"
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
